--- a/about.html
+++ b/about.html
@@ -370,6 +370,8 @@
                 class="fab fa-linkedin-in"></i></a>
             <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://www.instagram.com/p/CF9T-dtlTYQ/"><i
                 class="fab fa-instagram"></i></a>
+             <a class="btn btn-lg btn-outline-light btn-lg-square" href="https://www.instagram.com/p/CF9T-dtlTYQ/"><i
+                class="fab fa-youtube"></i></a>
           </div>
         </div>
         <div class="col-lg-3 col-md-6 mb-5">
