--- a/cohort5.html
+++ b/cohort5.html
@@ -281,7 +281,8 @@
             <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 220px;">
                 <img src="./img/cohort5/IMG-20230315-WA0019.jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <div class="  names">Samantha Nogqala </div>
+                    <a href="https://www.linkedin.com/in/samantha-nogqala-0ab793246"
+                       <div class="names">Samantha Nogqala </div></a>
                 </div>
               </div>
         </div>
@@ -311,7 +312,8 @@
             <div class="card shadow p-3 mb-5 bg-white rounded" style="width: 220px;">
                 <img src="./img/cohort5/IMG-20230315-WA0022 (1).jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
-                    <div class="  names">Ntombikayise Ncamiso</div>
+                    <a href="https://www.linkedin.com/in/ntombikayise-ncamiso-439b72168"
+                       <div class="names">Ntombikayise Ncamiso</div></a>
                 </div>
               </div>
         </div>
@@ -350,7 +352,7 @@
                 <img src="./img/cohort5/IMG-20230315-WA0032.jpg" class="card-img-top" alt="...">
                 <div class="card-body text-center">
                   <a href="https://www.linkedin.com/in/lebo-mtomboti-a1bb47272?trk=contact-info">
-                    <div class="  names">Lebo Mtobothi</div></a>
+                    <div class="  names">Lebu Mtobothi</div></a>
                 </div>
               </div>
         </div>
